# sc-409-pi5-bare-metal

./: LICENSE  README.md
debug/: cmsis-dap.cfg  gdb-init.txt  raspberrypi5.cfg
docs/: exp_01_addition.md  exp_03_privilege_drop.md  exp_04_rust_integration.md  exp_05_uart_echo.md  exp_array_summation.md
firmware/: config.txt  logs.txt  logs_no_sd.txt
src/01_halt_stub/: Makefile  linker.ld  start.s
src/02_assembly_basics/: Makefile  linker.ld  main.s
src/03_privilege_drop/: Makefile  kernel8.img  linker.ld  main.s  program.elf
src/04_booting_rust/: Cargo.toml  Makefile  boot.s  kernel8.img  linker.ld  main.rs  rust_toolchain.toml
src/04_booting_rust/.cargo/: config.toml
src/05_uart_mmio/: Cargo.toml  Makefile  boot.s  kernel8.img  linker.ld  main.rs  rust_toolchain.toml  uart.rs
src/05_uart_mmio/.cargo/: config.toml
